# ChatDev

./: .gitignore  README.md  pyproject.toml  run.py
CompanyConfig/Scholar/: ChatChainConfig.json  PhaseConfig.json  RoleConfig.json
WareHouse/QwenCalc_DefaultOrganization_20240810144204/: .py  QwenCalc.prompt  calculator.py  gui.py  main.py  manual.md  meta.txt
camel/: model_backend.py  typing.py  utils.py
chatdev/: chat_chain.py  phase.py  utils.py
qufetcher/: __init__.py  basicinfo.py
qufetcher/backtrace/: atrrsi_strtgy.py  bollcci_strtgy.py  donchain_strtgy.py  keltner_strtgy.py  liuwp_strtgy.py  mr_strategy.py  performance.py
qufetcher/dataapi/: reqdata.py
tests/: SZCodes.txt  __main__.py  test_atrrsi_strtgy.py  test_bollcci_strtgy.py  test_captial_ret.py  test_don_kel.py  test_gmtrade_api.py  test_qubasic_ph.py  test_stock_bars.py
visualizer/: app.py  utils.py
visualizer/templates/: index.html
