[tool.poetry]
name = "chatdev"
version = "0.1.0"
description = ""
authors = ["maryprimary <maryprimary@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
numpy = "1.26.4"
pandas = "2.2.2"
faiss-cpu = "1.7.4"
easydict = "1.13"
pyyaml = "6.0.2"
beautifulsoup4 = "4.12.3"
wikipedia-api = "0.7.1"
pillow = "10.4.0"
markdown = "3.7"
werkzeug = "3.0.4"
virtualenv = "20.26.4"
tiktoken = "0.7.0"
tenacity = "9.0.0"
requests = "2.32.3"
regex = "2024.9.11"
importlib-metadata = "8.5.0"
flask-socketio = "5.3.7"
flask = "3.0.3"
colorama = "0.4.6"
openai = "1.3.3"
tushare = "1.4.13"
matplotlib = "3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
